--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,9 @@ build_flags =
 
 [env:SerialMenu]
 build_src_filter = +<*> +<../examples/SerialMenu>
+
+[env:SSD1306AsciiMenu]
+build_src_filter = +<*> +<../examples/SSD1306AsciiMenu>
+lib_deps =
+	Wire
+	greiman/SSD1306Ascii@^1.3.5
