fix failing build of SerialMenu example

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,9 @@ build_flags =
 	-I$PROJECT_CORE_DIR/packages/toolchain-atmelavr/avr/include/avr
 
 [env:SerialMenu]
-build_src_filter = +<*> +<../examples/SerialMenu>
+build_src_filter =
+	+<*> +<../examples/SerialMenu>
+	-<SSD1306AsciiDrawer*>
 
 [env:SSD1306AsciiMenu]
 build_src_filter = +<*> +<../examples/SSD1306AsciiMenu>
